# lmg_qfi_dynamics

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  mpmath_dependency_gaps.py  parameters.ini  plot_qfi_results.py  plot_results.sh  pyproject.toml  qfi_simulation.ini  quantum_fisher_information_simulation.py  quantum_fisher_information_simulation_mpmath.py  run_simulation.sh  run_simulation_parallel.sh  simulation_qfi.py  simulation_qfi_naive.py  simulation_qfi_quspin.py
lmg_qfi/: __init__.py  config.py  evolution.py  io.py  operators.py  plotting.py  qfi.py  simulation.py  sld.py  utils.py
results/: InitialState.CAT_SUM_N=10_B=0.01.csv  InitialState.CAT_SUM_N=15_B=0.15.csv  InitialState.CAT_SUM_N=15_B=0.30.csv  InitialState.CAT_SUM_N=15_B=0.50.csv  InitialState.CAT_SUM_N=20_B=0.10.csv  InitialState.CAT_SUM_N=20_B=0.40.csv  InitialState.CAT_SUM_N=30_B=0.10.csv  InitialState.CAT_SUM_N=30_B=0.30.csv  InitialState.CAT_SUM_N=30_B=0.50.csv  InitialState.CAT_SUM_N=40_B=0.40.csv  InitialState.CAT_SUM_N=45_B=0.30.csv  InitialState.CAT_SUM_N=45_B=0.50.csv  InitialState.CAT_SUM_N=60_B=0.40.csv  InitialState.CAT_SUM_N=80_B=0.40.csv  InitialState.GS_CAT_N=10_B=0.01.csv  InitialState.GS_CAT_N=15_B=0.15.csv  InitialState.GS_CAT_N=15_B=0.30.csv  InitialState.GS_CAT_N=15_B=0.50.csv  InitialState.GS_CAT_N=20_B=0.10.csv  InitialState.GS_CAT_N=20_B=0.40.csv  InitialState.GS_CAT_N=30_B=0.10.csv  InitialState.GS_CAT_N=30_B=0.30.csv  InitialState.GS_CAT_N=30_B=0.50.csv  InitialState.GS_CAT_N=40_B=0.40.csv  InitialState.GS_CAT_N=45_B=0.30.csv  InitialState.GS_CAT_N=45_B=0.50.csv  (+31 more)
(+9 files in other folders)
